name:                forth
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/author/forth
license:             MIT
author:              Author
maintainer:          author@domain.com
copyright:           2017 Author
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

executable forth
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parser, Types, Eval, Primitives
  default-language:    Haskell2010
  extensions:          GeneralizedNewtypeDeriving
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5,
                       extra,
                       transformers,
                       mtl,
                       parsec,
                       parsec-numbers,
                       haskeline,
                       haskeline-repl,
                       monadplus,
                       uri,
                       lens,
                       wreq,
                       tostring,
                       process
